Make native carrier catalog dynamic
